--- a/broker/test_setup/nas/job_nas.yaml
+++ b/broker/test_setup/nas/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: '0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49'
+    requester_address: '0x12ba09353d5c8af8cb362d6ff1d782c1e195b571'
     provider_address: '0xeab50158e8e51de21616307a99c9604c1c453a02'
     source_code:
-        storage_id: ipfs
+        storage_id: eudat
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
@@ -11,4 +11,3 @@ config:
         job1:
             cores: 1
             run_time: 60
-    data: {}
