--- a/broker/test_setup/nas/job_cppr.yaml
+++ b/broker/test_setup/nas/job_cppr.yaml
@@ -1,21 +1,21 @@
 config:
-    requester_address: '0x6d00e4661e8407f24b2942149ea4a9d445d10038'
-    provider_address: '0x3e6FfC5EdE9ee6d782303B2dc5f13AFeEE277AeA'
+    requester_address: '0x78bc08e70dce53f7823456e34610bc55828373af'
+    provider_address: '0xeab50158e8e51de21616307a99c9604c1c453a02'
     source_code:
-        storage_id: gdrive
+        storage_id: eudat
         cache_type: public
         path: ~/test_eblocbroker/run_cppr
         storage_hours: 0
     data:
         data1:
-            hash: 983b9fe8a85b543dd5a4a75d031f1091
+            hash: c0fee5472f3c956ba759fd54f1fe843e
         data2:
-            hash: fe801973c5b22ef6861f2ea79dc1eb9c
+            hash: dd0fbccccf7a198681ab838c67b68fbf
         data3:
             cache_type: public
-            path: /home/alper/test_eblocbroker/dataset_zip/small/BL06-camel-sml
+            path: /home/alper/test_eblocbroker/dataset_zip/small/BVZ-tsukuba
             storage_hours: 1
-            storage_id: gdrive
+            storage_id: eudat
     data_transfer_out: 5
     jobs:
         job1:
