--- a/broker/test_setup/nas/job_nas.yaml
+++ b/broker/test_setup/nas/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: '0x4cd57387cc4414be8cece4e6ab84a7dd641eab25'
+    requester_address: '0x13fe0b65bdd902d252d0b431aec6acf02a0b2f41'
     provider_address: '0x38cc03c7e2a7d2acce50045141633ecdcf477e9a'
     source_code:
-        storage_id: eudat
+        storage_id: ipfs_gpg
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
