--- a/broker/test_setup/nas/job_cppr.yaml
+++ b/broker/test_setup/nas/job_cppr.yaml
@@ -1,21 +1,21 @@
 config:
-    requester_address: '0x6d00e4661e8407f24b2942149ea4a9d445d10038'
+    requester_address: '0x12ba09353d5c8af8cb362d6ff1d782c1e195b571'
     provider_address: '0x3e6FfC5EdE9ee6d782303B2dc5f13AFeEE277AeA'
     source_code:
-        storage_id: gdrive
+        storage_id: eudat
         cache_type: public
         path: ~/test_eblocbroker/run_cppr
         storage_hours: 0
     data:
         data1:
-            hash: 983b9fe8a85b543dd5a4a75d031f1091
+            hash: 03919732a417cb1d14049844b9de0f47
         data2:
-            hash: fe801973c5b22ef6861f2ea79dc1eb9c
+            hash: 45281dfec4618e5d20570812dea38760
         data3:
             cache_type: public
-            path: /home/alper/test_eblocbroker/dataset_zip/small/BL06-camel-sml
+            path: /home/alper/test_eblocbroker/dataset_zip/small/LB07-bunny-sml
             storage_hours: 1
-            storage_id: gdrive
+            storage_id: eudat
     data_transfer_out: 5
     jobs:
         job1:
