--- a/broker/test_setup/nas/job_cppr.yaml
+++ b/broker/test_setup/nas/job_cppr.yaml
@@ -1,21 +1,21 @@
 config:
-    requester_address: '0x24056c57e3b0933d2fa7d83fb9667d0efdfae64d'
-    provider_address: '0x765508fc8f78a465f518ae79897d0e4b249e82dc'
+    requester_address: '0x72c1a89ff3606aa29686ba8d29e28dccff06430a'
+    provider_address: '0xeab50158e8e51de21616307a99c9604c1c453a02'
     source_code:
-        storage_id: ipfs_gpg
+        storage_id: eudat
         cache_type: public
         path: ~/test_eblocbroker/run_cppr
         storage_hours: 0
     data:
         data1:
-            hash: c0fee5472f3c956ba759fd54f1fe843e
+            hash: b6aaf03752dc68d625fc57b451faa2bf
         data2:
-            hash: 1bfca57fe54bc46ba948023f754521d6
+            hash: 0d6c3288ef71d89fb93734972d4eb903
         data3:
             cache_type: public
-            path: /home/alper/test_eblocbroker/dataset_zip/small/LB07-bunny-sml
+            path: /home/alper/test_eblocbroker/dataset_zip/small/BVZ-sawtooth
             storage_hours: 1
-            storage_id: ipfs_gpg
+            storage_id: eudat
     data_transfer_out: 5
     jobs:
         job1:
