--- a/broker/cfg_temp.yaml
+++ b/broker/cfg_temp.yaml
@@ -11,7 +11,7 @@ cfg:
     gmail: alper.alimoglu.research@gmail.com
     gdrive: /usr/local/bin/gdrive
     provider:
-        slurmuser: avatar_doo_avatar
+        slurmuser: netlab
         is_bloxberg: true
         is_thread: true
         is_ipfs_use: true
@@ -19,3 +19,10 @@ cfg:
         is_gdrive_use: true
         is_eblocpoa: false
         is_geth_tunnel: false
+        available_core: 4
+        prices:
+            commitment_blk: 600
+            price_core_min: 100
+            price_data_transfer: 1
+            price_storage: 1
+            price_cache: 1
