--- a/broker/test_setup/nas/job_cppr.yaml
+++ b/broker/test_setup/nas/job_cppr.yaml
@@ -1,21 +1,21 @@
 config:
     requester_address: '0x72c1a89ff3606aa29686ba8d29e28dccff06430a'
-    provider_address: '0xeab50158e8e51de21616307a99c9604c1c453a02'
+    provider_address: '0x38cc03c7e2a7d2acce50045141633ecdcf477e9a'
     source_code:
-        storage_id: eudat
+        storage_id: gdrive
         cache_type: public
         path: ~/test_eblocbroker/run_cppr
         storage_hours: 0
     data:
         data1:
-            hash: b6aaf03752dc68d625fc57b451faa2bf
+            hash: 03919732a417cb1d14049844b9de0f47
         data2:
-            hash: 0d6c3288ef71d89fb93734972d4eb903
+            hash: fa64e96bcee96dbc480a1495bddbf53c
         data3:
             cache_type: public
-            path: /home/alper/test_eblocbroker/dataset_zip/small/BVZ-sawtooth
+            path: /home/alper/test_eblocbroker/dataset_zip/small/LB07-bunny-sml
             storage_hours: 1
-            storage_id: eudat
+            storage_id: gdrive
     data_transfer_out: 5
     jobs:
         job1:
