--- a/broker/eudat/job.yaml
+++ b/broker/eudat/job.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: "0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49"
-    provider_address: '0x3e6ffc5ede9ee6d782303b2dc5f13afeee277aea'
+    requester_address: '0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49'
+    provider_address: '0xeaB50158e8e51DE21616307a99C9604C1c453a02'
     source_code:
-        cache_type: public
+        cache_type: private
         path: ~/test_eblocbroker/test_data/base/source_code
         size_mb: 1
         storage_hours: 1
