--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ apscheduler==3.8.0
 aspy.refactor-imports==2.1.1
     # via
     #   seed-isort-config
-astroid==2.8.4
+astroid==2.9.3
     # via
     #   pylint
 asttokens==2.0.5
@@ -493,7 +493,7 @@ multipart==0.2.4
 multitasking==0.0.9
     # via
     #   yfinance
-mypy==0.910
+mypy==0.931
     # via
     #   flake8-mypy
 mypy-extensions==0.4.3
@@ -693,7 +693,7 @@ pyjwt==1.7.1
     # via
     #   eth-brownie
     #   pythx
-pylint==2.11.1
+pylint==2.12.2
 pymongo==3.11.0
 pymy==0.0.8
 pymysql==0.9.3
@@ -823,8 +823,8 @@ rlp==2.0.1
     #   eth-brownie
     #   eth-rlp
 roman==3.3
-rope==0.22.1
-ruamel.yaml==0.17.10
+rope==0.22.0
+ruamel.yaml==0.17.20
 ruamel.yaml.clib==0.2.6
     # via
     #   ruamel.yaml
@@ -834,6 +834,7 @@ secretstorage==3.3.1
 seed-isort-config==2.2.0
 selenium==3.141.0
 selinux==0.2.1
+shyaml==0.6.2
 semantic-version==2.8.5
     # via
     #   eth-brownie
