--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ force_grid_wrap = 0
 include_trailing_comma = True
 known_standard_library = tkinter
 known_first_party = brownie
-known_third_party = PySimpleGUI,Tkinter,base58,cid,config,consoledraw,daemon,daemons,dotenv,eblocbroker,filelock,flask,gdown,git,ipdb,ipfshttpclient,matplotlib,networkx,owncloud,psutil,pygments,pymongo,pypandoc,pytest,pytz,requests,rich,ruamel,setuptools,sphinx_rtd_theme,vulcano,web3,zc
+known_third_party = PySimpleGUI,Tkinter,argcomplete,base58,cid,config,consoledraw,daemon,daemons,dotenv,eblocbroker,filelock,flask,gdown,git,ipdb,ipfshttpclient,matplotlib,networkx,owncloud,psutil,pygments,pymongo,pypandoc,pytest,pytz,requests,rich,ruamel,setuptools,sphinx_rtd_theme,vulcano,web3,zc
 line_length = 120
 multi_line_output = 3
 use_parentheses = True
