Fix minor bugs.

--- a/broker/_slurm/confs/slurm.conf
+++ b/broker/_slurm/confs/slurm.conf
@@ -2,11 +2,11 @@
 # See the slurm.conf man page for more information.
 #
 #
-ControlMachine=home  # $(hostname -s)
+ClusterName=eblocbroker
+ControlMachine=ocean  # $(hostname -s)
 ControlAddr=127.0.0.1
 SlurmUser=alper
-ClusterName=cluster
-MailProg=/home/alper/ebloc-broker/broker/bash_scripts/slurm_mail_prog.sh
+MailProg=/var/ebloc-broker/slurm_mail_prog.sh
 MinJobAge=172800  # 48 h
 SlurmdSpoolDir=/var/spool/slurmd.%n
 SlurmdLogFile=/var/log/slurm/slurmd.%n.log
@@ -122,7 +122,8 @@ AccountingStorageEnforce=limits
 #AccountingStoragePass=
 #AccountingStoragePort=
 AccountingStoreJobComment=YES
-# AccountingStorageType=accounting_storage/slurmdbd
+AccountingStorageType=accounting_storage/slurmdbd
+
 #AccountingStorageUser=
 #AccountingStoreFlags=YES
 #DebugFlags=
@@ -144,7 +145,7 @@ SlurmdDebug=3
 #SlurmSchedLogFile=
 #SlurmSchedLogLevel=
 
-NodeName=home[1-2] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=1 RealMemory=7954
+NodeName=ocean[1-4] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=1 RealMemory=7954
 PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP Shared=FORCE:1
 
 # NodeName=home[1-4] NodeHostName=home NodeAddr=127.0.0.1 CPUs=1 ThreadsPerCore=1 Port=17001
