--- a/broker/yaml_files/job_simple.yaml
+++ b/broker/yaml_files/job_simple.yaml
@@ -1,21 +1,21 @@
 config:
-    requester_address: '0x378181ce7b07e8dd749c6f42772574441b20e35f'
-    provider_address: '0xeaB50158e8e51DE21616307a99C9604C1c453a02'
-    source_code:
-        storage_id: ipfs
-        cache_type: public
-        path: ~/test_eblocbroker/test_data/base/source_code
-        size_mb: 1
-        storage_hours: 1
-    data:
-        data1:
-            cache_type: public
-            path: ~/test_eblocbroker/test_data/base/data/data1
-            size_mb: 1
-            storage_hours: 1
-            storage_id: ipfs
-    data_transfer_out: 1
-    jobs:
-        job1:
-            cores: 1
-            run_time: 1
+  requester_address: "0x378181ce7b07e8dd749c6f42772574441b20e35f"
+  provider_address: "0xeaB50158e8e51DE21616307a99C9604C1c453a02"
+  source_code:
+    storage_id: ipfs # examples: ipfs | ipfs_cfg | eudat | gdrive
+    cache_type: public
+    path: ~/test_eblocbroker/test_data/base/source_code
+    size_mb: 1
+    storage_hours: 1
+  data:
+    data1:
+      cache_type: public
+      path: ~/test_eblocbroker/test_data/base/data/data1
+      size_mb: 1
+      storage_hours: 1
+      storage_id: ipfs
+  data_transfer_out: 1
+  jobs:
+    job1:
+      cores: 1
+      run_time: 1
