--- a/broker/yaml_files/register_requester.yaml
+++ b/broker/yaml_files/register_requester.yaml
@@ -1,4 +1,4 @@
-config:
-    account: '0x0636278cbd420368b1238ab204b1073df9cc1c5c'
-    email: alper.alimoglu.research2@gmail.co
-    federation_cloud_id: 059ab6ba-4030-48bb-b81b-12115f531296
+cfg:
+  eth_address: "0x0636278cbd420368b1238ab204b1073df9cc1c5c"
+  gmail: alper.alimoglu.research2@gmail.com
+  oc_username: dbae8f40-20da-4f6f-b466-d434793320be
