Update yaml, writing {} into the yaml file prevented.
It uses a temporary file in the same directory as the given path. This ensures
that the temporary file resides on the same filesystem. The temporary file will
then be atomically moved to the target location:

- Remove Color class in log.py.

--- a/broker/cfg_temp.yaml
+++ b/broker/cfg_temp.yaml
@@ -18,6 +18,7 @@ cfg:
     is_ipfs_use: True
     is_eudat_use: True
     is_gdrive_use: True
+    available_core: 1
     prices:
       commitment_blk: 600
       price_core_min: 100
