--- a/requirements.txt
+++ b/requirements.txt
@@ -139,7 +139,7 @@ click==8.0.3
     #   ng
     #   pip-tools
     #   ppi
-colorama==0.4.3
+colorama==0.4.4
     # via
     #   crayons
     #   rich
@@ -295,7 +295,7 @@ flake8==4.0.1
     #   flake8-noqa
 flake8-mypy==17.8.0
 flake8-noqa==1.2.1
-flask==1.1.2
+Flask==2.1.1
     # via
     #   grip
 fonttools==4.28.3
@@ -310,7 +310,7 @@ frozenlist==1.3.0
 gdown==3.12.2
     # via
     #   gshell
-git-filter-repo==2.32.0
+git-filter-repo==2.33.0
 gitdb==4.0.2
     # via
     #   gitpython
@@ -340,7 +340,7 @@ hyperlink==20.0.1
 hypothesis==6.27.3
     # via
     #   eth-brownie
-identify==1.4.19
+identify==2.4.12
     # via
     #   pre-commit
 idna==3.3
@@ -385,7 +385,7 @@ ipython-genutils==0.2.0
 isort==5.10.1
     # via
     #   pylint
-itsdangerous==1.1.0
+itsdangerous==2.1.2
     # via
     #   flask
 jedi==0.17.2
@@ -397,7 +397,7 @@ jeepney==0.6.0
     # via
     #   keyring
     #   secretstorage
-jinja2==2.11.2
+jinja2==3.1.1
     # via
     #   flask
     #   sphinx
@@ -489,7 +489,7 @@ multipart==0.2.4
 multitasking==0.0.9
     # via
     #   yfinance
-mypy==0.931
+mypy==0.942
     # via
     #   flake8-mypy
 mypy-extensions==0.4.3
@@ -598,7 +598,7 @@ pluggy==1.0.0
     #   python-lsp-server
     #   tox
 ppi==0.0.4
-pre-commit==2.5.1
+pre-commit==2.18.1
 prompt-toolkit==3.0.26
     # via
     #   eth-brownie
@@ -688,7 +688,7 @@ pyjwt==1.7.1
     #   eth-brownie
     #   pythx
 pylint==2.12.2
-pymongo==3.11.0
+pymongo==4.1.0
 pymy==0.0.8
 pymysql==0.9.3
     # via
@@ -757,7 +757,7 @@ python-language-server==0.36.2
 python-lsp-jsonrpc==1.0.0
     # via
     #   python-lsp-server
-python-lsp-server==1.3.3
+python-lsp-server==1.4.1
 python-slugify==1.2.6
 pythx==1.6.1
     # via
@@ -1065,7 +1065,7 @@ websockets==9.1
     #   python-binance
     #   web3
 webtest==2.0.35
-werkzeug==2.0.2
+Werkzeug==2.1.1
     # via
     #   flask
 wheel==0.37.1
