--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ ignore_missing_imports = True
 follow_imports = silent
 
 [pydocstyle]
-ignore = D100,D101,D102,D103,D105,D107,D203,D213,W0603,W1514,R1710
+ignore = D100,D101,D102,D105,D107,D203,D213,D103
