--- a/broker/docker/docker-compose.yml
+++ b/broker/docker/docker-compose.yml
@@ -1,5 +1,9 @@
-version: "2"
+version: "3"
 services:
-  hello_world:
-    image: ubuntu
-    command: [/bin/echo, "Hello world"]
+  app:
+    image: ebloc-broker
+    restart: always
+    ports:
+      - "4001:4001" # Public IPFS Port
+    command: [/bin/echo, "hello world"]
+    command: [/bin/tree, "."]
