--- a/broker/cfg_temp.yaml
+++ b/broker/cfg_temp.yaml
@@ -1,24 +1,28 @@
 cfg:
   eth_address: "0x0000000000000000000000000000000000000000"
+  oc_username: ""
+  gmail: ""
   whoami: alper
   home_dir: /home/alper
   datadir: /home/alper/.eblocpoa
   log_path: /home/alper/.ebloc-broker
   ebloc_path: /home/alper/ebloc-broker
-  oc_username: ""
-  gmail: ""
+  base_data_path: /home/alper/test_eblocbroker
   gdrive: /usr/local/bin/gdrive
   rpc_port: 8545
   provider:
     slurmuser: alper
-    is_thread: True
-    is_ipfs_use: True
-    is_eudat_use: True
-    is_gdrive_use: True
-    available_core: 1
+    is_bloxberg: true
+    is_thread: true
+    is_ipfs_use: true
+    is_eudat_use: true
+    is_gdrive_use: true
+    is_eblocpoa: false
+    is_geth_tunnel: false
+    available_core: 4
     prices:
       commitment_blk: 600
-      price_core_min: 100
+      price_core_min: 1
       price_data_transfer: 1
       price_storage: 1
       price_cache: 1
