--- a/broker/ipfs/job.yaml
+++ b/broker/ipfs/job.yaml
@@ -1,24 +1,24 @@
 config:
-  requester_address: "0x17b4ec0bcd6a8f386b354becd44b3c4813448184"
-  provider_address: "0x29e613B04125c16db3f3613563bFdd0BA24Cb629"
-  source_code:
-    cache_type: public
-    path: ~/test_eblocbroker/test_data/base/source_code
-    storage_hours: 0
-    storage_id: ipfs_gpg
-  data:
-    data1:
-      cache_type: public
-      path: ~/test_eblocbroker/test_data/base/data/data1
-      storage_hours: 1
-      storage_id: ipfs
+    requester_address: '0x17b4ec0bcd6a8f386b354becd44b3c4813448184'
+    provider_address: '0x1926b36AF775E1312FDEbCc46303eCAe50d945aF'
+    source_code:
+        cache_type: public
+        path: ~/test_eblocbroker/test_data/base/source_code
+        storage_hours: 0
+        storage_id: ipfs
+    data:
+        data1:
+            cache_type: public
+            path: ~/test_eblocbroker/test_data/base/data/data1
+            storage_hours: 1
+            storage_id: ipfs
   # data2:
   #     cache_type: public
   #     path: ~/test_eblocbroker/dataset_zip/small/KZ2-tsukuba
   #     storage_hours: 1
   #     storage_id: ipfs
-  data_transfer_out: 2
-  jobs:
-    job1:
-      cores: 1
-      run_time: 1
+    data_transfer_out: 2
+    jobs:
+        job1:
+            cores: 1
+            run_time: 1
