Fetch provider prices correctly based on commitment block.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+    rev: v4.2.0
     hooks:
       - id: check-yaml
 
@@ -33,6 +33,5 @@ repos:
     hooks:
       - id: flake8
 
-default_language_version:
+_language_version:
   python: python3
-  # python: python3.7
