--- a/broker/test_setup/nas/job_nas.yaml
+++ b/broker/test_setup/nas/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: '0x78bc08e70dce53f7823456e34610bc55828373af'
-    provider_address: '0x1926b36af775e1312fdebcc46303ecae50d945af'
+    requester_address: '0x2cc6d89cda9db6592f36d548d5ced9ec27a80d5c'
+    provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
     source_code:
-        storage_id: eudat
+        storage_id: ipfs
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
