--- a/broker/_slurm/Dockerfile
+++ b/broker/_slurm/Dockerfile
@@ -1,6 +1,7 @@
 # syntax=docker/dockerfile:1
 FROM python:3.7
 ARG DEBIAN_FRONTEND=noninteractive
+ARG DEBCONF_NOWARNINGS="yes"
 RUN apt-get update \
  && apt-get install -y --no-install-recommends apt-utils \
  && apt-get install -y git \
