--- a/broker/test_setup/nas/job_nas.yaml
+++ b/broker/test_setup/nas/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: '0x2cc6d89cda9db6592f36d548d5ced9ec27a80d5c'
-    provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
+    requester_address: '0xc660aba0006e51cd79428f179467a8d7fbcf90f7'
+    provider_address: '0x51e2b36469cdbf58863db70cc38652da84d20c67'
     source_code:
-        storage_id: ipfs
+        storage_id: eudat
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
