--- a/broker/_slurm/files/supervisord.conf
+++ b/broker/_slurm/files/supervisord.conf
@@ -17,7 +17,7 @@ serverurl=unix:///var/run/supervisor/supervisor.sock
 
 [program:munged]
 user=munge
-command=/usr/sbin/munged -F
+command=/usr/sbin/munged --force
 autostart=false
 autorestart=true
 startsecs=5
