--- a/broker/test_setup/nas/job_cppr.yaml
+++ b/broker/test_setup/nas/job_cppr.yaml
@@ -1,21 +1,21 @@
 config:
-    requester_address: '0x3d50f068445c457c0c38d52980a5e6442e780d89'
-    provider_address: '0x51e2b36469cdbf58863db70cc38652da84d20c67'
+    requester_address: '0x64b570f0e7c019dc750c4a75c33dca55bdc51845'
+    provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
     source_code:
-        storage_id: eudat
+        storage_id: ipfs_gpg
         cache_type: public
         path: ~/test_eblocbroker/run_cppr
         storage_hours: 0
     data:
         data1:
-            hash: f71df9d36cd519d80a3302114779741d
+            hash: 050e6cc8dd7e889bf7874689f1e1ead6
         data2:
-            hash: 8f6faf6cfd245cae1b5feb11ae9eb3cf
+            hash: 779745f315060d1bc0cd44b7266fb4da
         data3:
             cache_type: public
-            path: /home/alper/test_eblocbroker/dataset_zip/small/liver.n6c100
+            path: /home/alper/test_eblocbroker/dataset_zip/small/BVZ-tsukuba
             storage_hours: 1
-            storage_id: eudat
+            storage_id: ipfs_gpg
     data_transfer_out: 5
     jobs:
         job1:
