--- a/broker/test_setup/nas/job_nas.yaml
+++ b/broker/test_setup/nas/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: '0xf6261f330f75052c84022bf3c165153c36d0fcdc'
+    requester_address: '0xee516025bf14f7118aa9ced5eb2adacfd5827d14'
     provider_address: '0x1926b36af775e1312fdebcc46303ecae50d945af'
     source_code:
-        storage_id: gdrive
+        storage_id: ipfs_gpg
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
