--- a/broker/_slurm/files/supervisord.conf
+++ b/broker/_slurm/files/supervisord.conf
@@ -15,9 +15,22 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor/supervisor.sock
 
+[program:mongod]
+command=/usr/sbin/mongod
+stdout_logfile=/var/log/supervisor/mongod.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/mongod.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
+exitcodes=0,1,2
+autostart=false
+autorestart=false
+priority=2
+
 [program:munged]
 user=munge
-command=/usr/sbin/munged --force
+command=/usr/sbin/munged -F
 autostart=false
 autorestart=true
 startsecs=5
@@ -30,6 +43,7 @@ stderr_logfile=/var/log/supervisor/munged.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=5
 priority=1
+loglevel=trace
 
 [program:mysqld]
 command=/usr/bin/pidproxy /var/run/mariadb/mariadb.pid /usr/bin/mysqld_safe
