Add mongod into Dockerfile.
- Add venv installation from Dockerfile.

--- a/broker/_slurm/files/supervisord.conf
+++ b/broker/_slurm/files/supervisord.conf
@@ -16,7 +16,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///var/run/supervisor/supervisor.sock
 
 [program:mongod]
-command=/usr/sbin/mongod
+user=mongodb
+command=/usr/bin/mongod --bind_ip 127.0.0.1
 stdout_logfile=/var/log/supervisor/mongod.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=5
@@ -90,7 +91,7 @@ priority=50
 
 [program:slurmd]
 user=root
-#command=/bin/bash -c "until 2>/dev/null >/dev/tcp/localhost/6817; do echo 'Waiting for port 6817'; sleep 1; done && /usr/sbin/slurmd -Dvvv"
+# command=/bin/bash -c "until 2>/dev/null >/dev/tcp/localhost/6817; do echo 'Waiting for port 6817'; sleep 1; done && /usr/sbin/slurmd -Dvvv"
 command=/usr/sbin/slurmd -Dvvv
 autostart=false
 autorestart=false
