--- a/docker/requester/supervisord.conf
+++ b/docker/requester/supervisord.conf
@@ -29,6 +29,20 @@ autostart=false
 autorestart=false
 priority=2
 
+[program:mongod_r]
+user=mongodb --port 27019
+command=/usr/bin/mongod --bind_ip 127.0.0.1
+stdout_logfile=/var/log/supervisor/mongod.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/mongod.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
+exitcodes=0,1,2
+autostart=false
+autorestart=false
+priority=2
+
 [program:munged]
 user=munge
 command=/usr/sbin/munged -F
