--- a/requirements.txt
+++ b/requirements.txt
@@ -103,7 +103,7 @@ cached-property==1.5.2
     # via
     #   aspy.refactor-imports
     #   vulcano
-certifi==2021.10.8
+certifi==2022.5.18.1
     # via
     #   eth-brownie
     #   pipenv
@@ -228,7 +228,7 @@ eth-account==0.5.7
     # via
     #   eth-brownie
     #   web3
-eth-brownie==1.18.2
+eth-brownie==1.19.0
 eth-event==1.2.3
     # via
     #   eth-brownie
@@ -607,7 +607,7 @@ protobuf==3.20.1
     # via
     #   eth-brownie
     #   web3
-psutil==5.9.0
+psutil==5.9.1
     # via
     #   eth-brownie
 ptyprocess==0.7.0
@@ -814,7 +814,6 @@ rlp==2.0.1
     #   eth-brownie
     #   eth-rlp
 roman==3.3
-rope==0.22.0
 ruamel.yaml==0.17.20
 ruamel.yaml.clib==0.2.6
     # via
@@ -903,6 +902,7 @@ soupsieve==2.2.1
 sphinx==4.3.1
     # via
     #   sphinx-rtd-theme
+sphinx-autobuild==2021.3.14
 sphinx-rtd-dark-mode==1.2.4
 sphinx-rtd-theme==1.0.0
     # via
@@ -1045,7 +1045,7 @@ wcwidth==0.2.5
     # via
     #   eth-brownie
     #   prompt-toolkit
-web3==5.29.0
+web3==5.29.1
     # via
     #   eth-brownie
 webdriver-manager==3.4.2
