--- a/broker/test_setup/job_nas.yaml
+++ b/broker/test_setup/job_nas.yaml
@@ -1,8 +1,8 @@
 config:
-    requester_address: '0xee516025bf14f7118aa9ced5eb2adacfd5827d14'
-    provider_address: '0x1926b36af775e1312fdebcc46303ecae50d945af'
+    requester_address: '0x77c0b42b5c358ff7c97e268794b9ff6a278a0f1e'
+    provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
     source_code:
-        storage_id: ipfs_gpg
+        storage_id: eudat
         cache_type: public
         path: ~/test_eblocbroker/NPB3.3-SER_source_code
         storage_hours: 0
