--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@
 #    pip-compile
 #
 accesscontrol==4.2
-atomicwrites==1.4.0
 acquisition==4.6
     # via
     #   accesscontrol
@@ -24,11 +23,9 @@ alabaster==0.7.12
     #   sphinx
 apipkg==1.5
 appdirs==1.4.4
-    # via
-    #   virtualenv
 apscheduler==3.8.0
 argcomplete==2.0.0
-aspy.refactor-imports==2.1.1
+aspy-refactor-imports==2.1.1
     # via
     #   seed-isort-config
 astroid==2.11.5
@@ -43,6 +40,7 @@ async-timeout==4.0.2
     #   aiohttp
     #   eth-brownie
 asynctest==0.13.0
+atomicwrites==1.4.0
 attrdict==2.0.1
 attrs==21.4.0
     # via
@@ -101,7 +99,7 @@ btrees==4.7.2
     #   zodb
 cached-property==1.5.2
     # via
-    #   aspy.refactor-imports
+    #   aspy-refactor-imports
     #   vulcano
 certifi==2022.5.18.1
     # via
@@ -120,7 +118,7 @@ cfgv==3.1.0
     #   pre-commit
 chameleon==3.8.1
     # via
-    #   z3c.pt
+    #   z3c-pt
 chardet==4.0.0
     # via
     #   python-debian
@@ -141,7 +139,7 @@ click==8.1.3
 colorama==0.4.4
     # via
     #   crayons
-    #   rich
+    #   sphinx-autobuild
 colored==1.4.2
 colored-traceback==0.3.0
 coloredlogs==14.0
@@ -194,12 +192,14 @@ decorator==4.4.2
     #   ipython
     #   traitlets
 dill==0.3.4
+    # via
+    #   pylint
 distlib==0.3.1
     # via
     #   virtualenv
 distro==1.4.0
     # via
-    #   lazr.restfulclient
+    #   lazr-restfulclient
     #   selinux
     #   ssh-import-id
 docopt==0.6.2
@@ -294,7 +294,7 @@ flake8==4.0.1
     #   flake8-noqa
 flake8-mypy==17.8.0
 flake8-noqa==1.2.1
-Flask==2.1.1
+flask==2.1.1
     # via
     #   grip
 fonttools==4.28.3
@@ -328,7 +328,7 @@ hexbytes==0.2.2
 httplib2==0.14.0
     # via
     #   launchpadlib
-    #   lazr.restfulclient
+    #   lazr-restfulclient
 humanfriendly==8.1
     # via
     #   coloredlogs
@@ -355,6 +355,8 @@ imagesize==1.3.0
     #   sphinx
 importchecker==2.0
 importlib-metadata==4.2.0
+    # via
+    #   flask
 importlib-resources==5.1.2
 importmagic==0.1.7
 incremental==17.5.0
@@ -419,10 +421,10 @@ kiwisolver==1.3.1
     # via
     #   matplotlib
 launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
+lazr-restfulclient==0.14.2
     # via
     #   launchpadlib
-lazr.uri==1.0.3
+lazr-uri==1.0.3
     # via
     #   launchpadlib
     #   wadllib
@@ -430,6 +432,9 @@ lazy-object-proxy==1.7.1
     # via
     #   astroid
     #   eth-brownie
+livereload==2.6.3
+    # via
+    #   sphinx-autobuild
 lmdb==1.2.0
 lockfile==0.12.2
     # via
@@ -484,7 +489,7 @@ multihash==0.1.1
 multimapping==4.1
 multipart==0.2.4
     # via
-    #   zope.publisher
+    #   zope-publisher
 multitasking==0.0.9
     # via
     #   yfinance
@@ -522,7 +527,7 @@ numpy==1.19.4
     #   yfinance
 oauthlib==3.1.0
     # via
-    #   lazr.restfulclient
+    #   lazr-restfulclient
 packaging==21.3
     # via
     #   bleach
@@ -580,7 +585,7 @@ pillow==8.0.1
     #   imageio
     #   matplotlib
     #   reportlab
-pip-tools==6.5.1
+pip-tools==6.6.2
 pipenv==2020.11.15
 pipupgrade==1.10.1
 pkginfo==1.5.0.1
@@ -589,6 +594,7 @@ platformdirs==2.5.2
     #   black
     #   eth-brownie
     #   pylint
+    #   virtualenv
 pluggy==1.0.0
     # via
     #   eth-brownie
@@ -640,7 +646,8 @@ pyasn1-modules==0.2.8
     # via
     #   service-identity
 pycairo==1.21.0
-    # via pygobject
+    # via
+    #   pygobject
 pycares==4.0.0
     # via
     #   aiodns
@@ -748,7 +755,7 @@ python-dotenv==0.16.0
     #   eth-brownie
 python-gettext==4.0
     # via
-    #   zope.i18n
+    #   zope-i18n
 python-jsonrpc-server==0.4.0
     # via
     #   python-language-server
@@ -769,7 +776,7 @@ pytz==2020.1
     #   datetime
     #   pandas
     #   tzlocal
-    #   zope.i18n
+    #   zope-i18n
 pyxdg==0.26
 pyyaml==5.4.1
     # via
@@ -814,10 +821,10 @@ rlp==2.0.1
     #   eth-brownie
     #   eth-rlp
 roman==3.3
-ruamel.yaml==0.17.20
-ruamel.yaml.clib==0.2.6
+ruamel-yaml==0.17.20
+ruamel-yaml-clib==0.2.6
     # via
-    #   ruamel.yaml
+    #   ruamel-yaml
 secretstorage==3.3.1
     # via
     #   keyring
@@ -858,7 +865,8 @@ six==1.16.0
     #   gdown
     #   jsonschema
     #   launchpadlib
-    #   lazr.restfulclient
+    #   lazr-restfulclient
+    #   livereload
     #   multiaddr
     #   parsimonious
     #   persistence
@@ -878,12 +886,12 @@ six==1.16.0
     #   virtualenv
     #   webtest
     #   wsgiproxy2
-    #   z3c.pt
+    #   z3c-pt
     #   zodb
-    #   zope.i18nmessageid
-    #   zope.publisher
-    #   zope.tales
-    #   zope.traversing
+    #   zope-i18nmessageid
+    #   zope-publisher
+    #   zope-tales
+    #   zope-traversing
 slip==0.3.8
 smmap==3.0.1
     # via
@@ -901,6 +909,7 @@ soupsieve==2.2.1
     #   beautifulsoup4
 sphinx==4.3.1
     # via
+    #   sphinx-autobuild
     #   sphinx-rtd-theme
 sphinx-autobuild==2021.3.14
 sphinx-rtd-dark-mode==1.2.4
@@ -948,7 +957,6 @@ toml==0.10.2
     #   ipdb
     #   pep517
     #   pre-commit
-    #   pylint
     #   pytest
     #   tox
 tomli==2.0.1
@@ -956,11 +964,15 @@ tomli==2.0.1
     #   black
     #   eth-brownie
     #   mypy
+    #   pylint
     #   setuptools-scm
 toolz==0.11.2
     # via
     #   cytoolz
     #   eth-brownie
+tornado==6.1
+    # via
+    #   livereload
 tox==3.24.3
 tqdm==4.64.0
     # via
@@ -974,7 +986,7 @@ transaction==3.0.0
     # via
     #   accesscontrol
     #   zodb
-    #   zope.traversing
+    #   zope-traversing
 twisted==20.3.0
 txaio==20.12.1
     # via
@@ -983,15 +995,19 @@ typed-ast==1.5.1
 types-filelock==0.1.5
 types-pytz==2021.1.2
 types-pyyaml==6.0.0
+types-requests==2.27.14
 types-termcolor==1.1.1
+types-urllib3==1.26.15
+    # via
+    #   types-requests
 typing-extensions==4.0.1
     # via
     #   astroid
     #   black
-    #   eth-brownie
     #   flake8-noqa
     #   mypy
     #   pylint
+    #   rich
 tzlocal==2.1
     # via
     #   apscheduler
@@ -1037,7 +1053,7 @@ vyper==0.3.3
 wadllib==1.3.3
     # via
     #   launchpadlib
-    #   lazr.restfulclient
+    #   lazr-restfulclient
 waitress==1.4.4
     # via
     #   webtest
@@ -1062,13 +1078,15 @@ websockets==9.1
     #   python-binance
     #   web3
 webtest==2.0.35
-Werkzeug==2.1.1
+werkzeug==2.1.1
     # via
     #   flask
 wheel==0.37.1
     # via
+    #   eth-brownie
     #   pip-tools
     #   pypandoc
+    #   vyper
 wrapt==1.14.1
     # via
     #   astroid
@@ -1082,8 +1100,8 @@ yarl==1.7.2
     #   aiohttp
     #   eth-brownie
 yfinance==0.1.63
-z3c.pt==3.3.0
-zc.lockfile==2.0
+z3c-pt==3.3.0
+zc-lockfile==2.0
     # via
     #   zodb
 zconfig==3.5.0
@@ -1099,60 +1117,60 @@ zodb==5.6.0
 zodbpickle==2.0.0
     # via
     #   zodb
-zope.browser==2.3
+zope-browser==2.3
     # via
-    #   zope.publisher
-zope.component==4.6.2
-    # via
-    #   accesscontrol
-    #   z3c.pt
-    #   zope.contentprovider
-    #   zope.i18n
-    #   zope.publisher
-    #   zope.security
-    #   zope.traversing
-zope.configuration==4.4.0
+    #   zope-publisher
+zope-component==4.6.2
     # via
     #   accesscontrol
-    #   zope.publisher
-zope.contentprovider==4.2.1
-    # via
-    #   z3c.pt
-zope.contenttype==4.5.0
-    # via
-    #   zope.publisher
-zope.deferredimport==4.3.1
+    #   z3c-pt
+    #   zope-contentprovider
+    #   zope-i18n
+    #   zope-publisher
+    #   zope-security
+    #   zope-traversing
+zope-configuration==4.4.0
     # via
     #   accesscontrol
-    #   zope.component
-zope.deprecation==4.4.0
+    #   zope-publisher
+zope-contentprovider==4.2.1
     # via
-    #   zope.component
-    #   zope.i18n
-zope.event==4.5.0
+    #   z3c-pt
+zope-contenttype==4.5.0
     # via
-    #   zope.component
-    #   zope.contentprovider
-    #   zope.publisher
-    #   zope.schema
-zope.exceptions==4.4
+    #   zope-publisher
+zope-deferredimport==4.3.1
     # via
-    #   zope.publisher
-zope.hookable==5.1.0
+    #   accesscontrol
+    #   zope-component
+zope-deprecation==4.4.0
     # via
-    #   zope.component
-zope.i18n==4.7.0
+    #   zope-component
+    #   zope-i18n
+zope-event==4.5.0
     # via
-    #   z3c.pt
-    #   zope.publisher
-    #   zope.traversing
-zope.i18nmessageid==5.0.1
+    #   zope-component
+    #   zope-contentprovider
+    #   zope-publisher
+    #   zope-schema
+zope-exceptions==4.4
     # via
-    #   zope.configuration
-    #   zope.i18n
-    #   zope.security
-    #   zope.traversing
-zope.interface==5.4.0
+    #   zope-publisher
+zope-hookable==5.1.0
+    # via
+    #   zope-component
+zope-i18n==4.7.0
+    # via
+    #   z3c-pt
+    #   zope-publisher
+    #   zope-traversing
+zope-i18nmessageid==5.0.1
+    # via
+    #   zope-configuration
+    #   zope-i18n
+    #   zope-security
+    #   zope-traversing
+zope-interface==5.4.0
     # via
     #   accesscontrol
     #   acquisition
@@ -1161,64 +1179,64 @@ zope.interface==5.4.0
     #   persistent
     #   transaction
     #   twisted
-    #   z3c.pt
+    #   z3c-pt
     #   zexceptions
     #   zodb
-    #   zope.browser
-    #   zope.component
-    #   zope.configuration
-    #   zope.contentprovider
-    #   zope.exceptions
-    #   zope.location
-    #   zope.proxy
-    #   zope.publisher
-    #   zope.schema
-    #   zope.security
-    #   zope.tales
-    #   zope.traversing
-zope.location==4.2
+    #   zope-browser
+    #   zope-component
+    #   zope-configuration
+    #   zope-contentprovider
+    #   zope-exceptions
+    #   zope-location
+    #   zope-proxy
+    #   zope-publisher
+    #   zope-schema
+    #   zope-security
+    #   zope-tales
+    #   zope-traversing
+zope-location==4.2
     # via
-    #   zope.contentprovider
-    #   zope.publisher
-    #   zope.security
-    #   zope.traversing
-zope.proxy==4.4.0
+    #   zope-contentprovider
+    #   zope-publisher
+    #   zope-security
+    #   zope-traversing
+zope-proxy==4.4.0
     # via
-    #   zope.deferredimport
-    #   zope.location
-    #   zope.publisher
-    #   zope.security
-    #   zope.traversing
-zope.publisher==6.0.2
-    # via
-    #   accesscontrol
-    #   zexceptions
-    #   zope.contentprovider
-    #   zope.traversing
-zope.schema==6.1.0
-    # via
-    #   accesscontrol
-    #   zope.configuration
-    #   zope.contentprovider
-    #   zope.i18n
-    #   zope.location
-    #   zope.security
-zope.security==5.1.1
+    #   zope-deferredimport
+    #   zope-location
+    #   zope-publisher
+    #   zope-security
+    #   zope-traversing
+zope-publisher==6.0.2
     # via
     #   accesscontrol
     #   zexceptions
-    #   zope.publisher
-    #   zope.traversing
-zope.tales==5.1
-    # via
-    #   zope.contentprovider
-zope.testing==4.9
+    #   zope-contentprovider
+    #   zope-traversing
+zope-schema==6.1.0
     # via
     #   accesscontrol
-zope.traversing==4.4.1
+    #   zope-configuration
+    #   zope-contentprovider
+    #   zope-i18n
+    #   zope-location
+    #   zope-security
+zope-security==5.1.1
     # via
-    #   z3c.pt
-types-requests==2.27.14
+    #   accesscontrol
+    #   zexceptions
+    #   zope-publisher
+    #   zope-traversing
+zope-tales==5.1
+    # via
+    #   zope-contentprovider
+zope-testing==4.9
+    # via
+    #   accesscontrol
+zope-traversing==4.4.1
+    # via
+    #   z3c-pt
+
 # The following packages are considered to be unsafe in a requirements file:
 # pip
 # setuptools
